--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,8 @@
-<h1>StaticPages#index</h1>
-<p>Welcome! The date and time is <%= Time.now %></p>
-<%= image_tag("roadbike.jpg") %>
+<div id="bb-header" class="text-center">
+	<div class="overlay">
+    <div class="content">
+				<h1>Welcome to Bikes Berlin</h1>
+				<h2>Your source for used bikes in Berlin</h2>
+		</div>
+	</div>
+</div>
