--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,14 +31,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Bikes Berlin</a>
+          <a class="navbar-brand" href="static_pages#index">Bikes Berlin</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" >About</a></li>
-            <li><a href="#" >Bikes</a></li>
+            <li><a href="products#index" >Bikes</a></li>
             <li><a href="#" >Gallery</a></li>
             <li><a href="#" >Clients</a></li>
             <li><a href="#" >Contact</a></li>
