--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,28 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container">
+    <h1 class="section-title">Check out our <strong class="color">latest</strong> arrivals</h1>
+    <hr>
+  <div class="container-fluid">
+    <div class="row">
+      <% @products.each do |product| %>
+      <div class="col-sm-4 col-lg-4 col-md-4">
+        <div class="thumbnail">
+          <img><%= link_to image_tag(product.image_url, class: "img-responsive"), product %></img>
+          <div class="caption">
+            <h4 class="pull-right"><%= product.price %></h4>
+            <h4 class="color"><%= product.name %></h4>
+            <p><%= product.description %></p>
+            <p class="pull-right"><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            <p><%= link_to 'Edit', edit_product_path(product) %></p>  
+          </div>
+        </div>
+      </div><!--end col-->
+      <% end %>
+    </div>
+  </div>
+  <%= link_to 'New Product', new_product_path %>
+</div>
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
