--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -87,6 +87,10 @@ color: #ffcc33;
 
 }
 
+#bb-header h1{
+	color: #ffcc33;
+}
+
 #bb-header .overlay{
 	background: -moz-linear-gradient(top,  rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.73) 17%, rgba(0,0,0,0.66) 35%, rgba(0,0,0,0.55) 62%, rgba(0,0,0,0.4) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(17%,rgba(0,0,0,0.73)), color-stop(35%,rgba(0,0,0,0.66)), color-stop(62%,rgba(0,0,0,0.55)), color-stop(100%,rgba(0,0,0,0.4))); /* Chrome,Safari4+ */
@@ -99,17 +103,13 @@ color: #ffcc33;
 	background-attachment: fixed;
 }
 
-bb-header p.lead{
+#bb-header p.lead{
 	color: #e3e3e3;
 }
 
 .content{
 	position: relative;
 	padding: 20% 0 0;
-}
-
-.color{
-	color: #ffcc33;
 }
 
 
