--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,9 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-
+<div class="container">
 <%= yield %>
-
+</div>
 <!-- Footer
     ==========================================-->
 <nav id="footer">
