--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,11 @@
 
 
 <p id="notice"><%= notice %></p>
-    <h1 class="section-title">Check out our <strong class="color">latest</strong> arrivals</h1>
+    <h1 class="section-title">Check out our <strong class="color">awesome</strong> bikes!</h1>
     <hr>
   <div class="container-fluid">
     <div class="row">
       <%= render partial: "shared/product", collection: @products %>
-     
     </div>
   </div>
   <%= link_to 'New Product', new_product_path %>
