--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,20 +1,20 @@
-<h2> Featured Products </h2>
-
+<h1 class="section-title">Check out our <strong class="color">latest</strong> arrivals</h1>
+<hr>
 	<div id="carousel-example-generic" class="carousel slider" data-ride="carousel">
 		<!--indicators-->
 		<ol class="carousel-indicators">
-			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			<% @products.each do |product| %>
+			<li data-target="#carousel-example-generic" data-slide-to="<%= product.id %>" class="<%= " active" if product == @products.first %>"></li>
+			<% end %>
 		</ol>
 
 		<!--wrapper for slides-->
 		<div class="carousel-inner" role="listbox">
 			<% @products.each do |product| %>
-			<div class="item<% " active" if product == @products.first %>">
-				<%= image_tag(product.image_url) %>
+			<div class="item<%= " active" if product == @products.first %>">
+				<img><%= link_to image_tag(product.image_url, class: "img-responsive"), product %></img>
 				<div class="carousel-caption">
-					<%= product.name %>
+					<h3><%= product.name %></h3>
 				</div>
 			</div>
 			<% end %>
@@ -31,3 +31,4 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+</br>
