--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
       <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
-          <img><%= image_tag(product.image_url, class: "img-responsive") %></img>
+          <img><%= link_to image_tag(product.image_url, class: "img-responsive"), product %></img>
           <div class="caption">
             <h4 class="pull-right">&#36;<%= product.price %></h4>
             <h4 class="color"><%= product.name %></h4>
