--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="static_pages#index">Bikes Berlin</a>
+          <a class="navbar-brand" href="static_pages#landing_page">Bikes Berlin</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
