--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,6 +4,6 @@
 	<%= render 'form' %>
 
 	<%= link_to 'Show', @product %> |
-	<%= link_to 'Back', products_path %>
+	<%= link_to 'Back', product_path %>
 
 <br>
