--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,26 +1,89 @@
 
 	<br>
 	<p id="notice"><%= notice %></p>
+    <div class="row">
+    	<div class="col-md-6">
+    		<div class="thumbnail">		    
+					<img class="img-responsive" alt="">
+			     <%= image_tag(@product.image_url) %>
+			    </img>
+			  </div>
+		  </div>
+		  <div class="col-md-6">  
+		    <div class="thumbnail">
+		        <div class="caption-full">
+		          <h4 class="pull-right">&#36;<%= @product.price %></h4>
+		          <h4><a href="#"><%= @product.name %></a>
+		          </h4>
+		          <p><%= @product.description %></p>
+		        </div>
+		        <!-- Nav tabs -->
+					  <ul class="nav nav-tabs" role="tablist">
+					    <li role="presentation" class="active"><a href="#detail" aria-controls="details" role="tab" data-toggle="tab">Details</a></li>
+					    <li role="presentation"><a href="#specs" aria-controls="spec" role="tab" data-toggle="tab">Specs</a></li>
+					    <li role="presentation"><a href="#reviews" aria-controls="reviews" role="tab" data-toggle="tab">Reviews</a></li>
+					  </ul>
 
-	<p>
-	  <strong>Name:</strong>
-	  <%= @product.name %>
-	</p>
+					  <!-- Tab panes -->
+					  <div class="tab-content">
+					    <div role="tabpanel" class="tab-pane active" id="detail"></br><p><%= @product.details %></p></div>
+					    <div role="tabpanel" class="tab-pane" id="specs"><%= render 'specs' %></div>
+					    <div role="tabpanel" class="tab-pane" id="reviews">
+					    	<div class="text-right">
+					    	</br>
+                   <a class="btn btn-success">Leave a Review</a>
+                </div>
 
-	<p>
-	  <strong>Price:</strong>
-	  &#36;<%= @product.price %>
-	</p>
+                <hr>
 
-	<p>
-	  <strong>Description:</strong>
-	  <%= @product.description %>
-	</p>
+                <div class="row">
+                  <div class="col-md-12">
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                       Anonymous
+                    <span class="pull-right">10 days ago</span>
+                      <p>This product was great in terms of quality. I would definitely buy another!</p>
+                  </div>
+                </div>
 
-	<p>
-	  <strong>Image url:</strong>
-	  <%= @product.image_url %>
-	</p>
+                <hr>
+
+                <div class="row">
+                  <div class="col-md-12">
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                       Anonymous
+                    <span class="pull-right">12 days ago</span>
+                      <p>I've alredy ordered another one!</p>
+                  </div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                  <div class="col-md-12">
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                       Anonymous
+                    <span class="pull-right">15 days ago</span>
+                      <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
+                  </div>
+                </div>
+					    </div>
+					  </div>
+		    </div>
+	  	</div>
+  	</div>
+	
 
 	<%= link_to 'Edit', edit_product_path(@product) %> |
 	<%= link_to 'Back', products_path %>
