--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,5 @@
 
+<div class="container">
 	<h1>Editing Product</h1>
 
 	<%= render 'form' %>
@@ -7,3 +8,4 @@
 	<%= link_to 'Back', product_path %>
 
 <br>
+</div>
