--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-
+  <div class="container"> 
 	<br>
 	<p id="notice"><%= notice %></p>
     <div class="row">
@@ -89,3 +89,4 @@
 	<%= link_to 'Back', products_path %>
 
 <br>
+</div>
