--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
    ==========================================-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 	<!-- JAVASCRIPT
    ==========================================--> 
@@ -38,7 +40,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" >About</a></li>
-            <li><a href="products#index" >Bikes</a></li>
+            <li><a href="products#index">Bikes</a></li>
             <li><a href="#" >Gallery</a></li>
             <li><a href="#" >Clients</a></li>
             <li><a href="#" >Contact</a></li>
@@ -46,9 +48,9 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-<div class="container">
+
 <%= yield %>
-</div>
+
 <!-- Footer
     ==========================================-->
 <nav id="footer">
