--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,34 +1,75 @@
-<h1 class="section-title">Check out our <strong class="color">latest</strong> arrivals</h1>
-<hr>
-	<div id="carousel-example-generic" class="carousel slider" data-ride="carousel">
-		<!--indicators-->
-		<ol class="carousel-indicators">
-			<% @products.each do |product| %>
-			<li data-target="#carousel-example-generic" data-slide-to="<%= product.id %>" class="<%= " active" if product == @products.first %>"></li>
-			<% end %>
-		</ol>
 
-		<!--wrapper for slides-->
-		<div class="carousel-inner" role="listbox">
-			<% @products.each do |product| %>
-			<div class="item<%= " active" if product == @products.first %>">
-				<img><%= link_to image_tag(product.image_url, class: "img-responsive"), product %></img>
-				<div class="carousel-caption">
-					<h3><%= product.name %></h3>
+	<div id="bb-header" class="text-center">
+		<div class="overlay">
+	    <div class="content">
+					<h1>Welcome to Bikes Berlin</h1>
+					<h2>Your source for used bikes in Berlin</h2>
+					<a href="#featured" class="page-scroll btn btn-xl">Featured Products</a>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<div id="featured" class="container">
+		<div class="row">
+			<div class="col-md-6
+			">
+				<div id="carousel-example-generic" class="carousel slider" data-ride="carousel">
+					<!--indicators-->
+					<ol class="carousel-indicators">
+						<% @products.each do |product| %>
+						<li data-target="#carousel-example-generic" data-slide-to="<%= product.id %>" class="<%= " active" if product == @products.first %>"></li>
+						<% end %>
+					</ol>
+
+					<!--wrapper for slides-->
+					<div class="carousel-inner" role="listbox">
+						<% @products.each do |product| %>
+						<div class="item<%= " active" if product == @products.first %>">
+							<img><%= link_to image_tag(product.image_url, class: "img-responsive"), product %></img>
+							<div class="carousel-caption">
+								<h3><%= product.name %></h3>
+							</div>
+						</div>
+						<% end %>
+					</div>
+				</div>
+				<!--end carousel-->	
+			</div>
+			<div class="col-md-6">	
+				<h1 class="section-title">STAFF <strong class="color">FAVORITES</strong>!</h1>
+				<div class="section-title">
+					<p>We are constantly getting in great bikes from all around the city! Here are some of our current favorites! Be sure to check them out, or you can go straight on to our products page to see all the wonderful bikes we have in stock.</p>
+				</div>
+				<div class="section-title">
+					<div class="btn btn-primary btn-xl" href="#">All Bikes!</div>
 				</div>
 			</div>
-			<% end %>
 		</div>
-
-
-	<!--controls-->
-	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</br>
+	</div>
+	<hr>
+	<div class="container">
+		<!-- Content Row -->
+  <div class="row">
+    <div class="col-md-4">
+       <h2>Heading 1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+          <a class="btn btn-default" href="#">More Info</a>
+    </div>
+    <!-- /.col-md-4 -->
+        <div class="col-md-4">
+       <h2>Heading 2</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+          <a class="btn btn-default" href="#">More Info</a>
+    </div>
+    <!-- /.col-md-4 -->
+        <div class="col-md-4">
+       <h2>Heading 3</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+          <a class="btn btn-default" href="#">More Info</a>
+    </div>
+    <!-- /.col-md-4 -->
+  </div>
+  <!-- /.row -->
+	</div>
+	<hr>
+	</br>
