--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,17 +33,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="static_pages#landing_page">Bikes Berlin</a>
+          <%= link_to "Berlin Bikes", root_path %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" >About</a></li>
-            <li><a href="products#index">Bikes</a></li>
-            <li><a href="#" >Gallery</a></li>
-            <li><a href="#" >Clients</a></li>
-            <li><a href="#" >Contact</a></li>
+            <li><%= link_to "About", static_pages_about_path %></li>
+            <li><%= link_to "Bikes", products_path %></li>
+            <li><%= link_to "Gallery", root_path %></li>
+            <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
