added search form in menu, styled all forms

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,4 +1,5 @@
 
+
 	<div id="bb-header" class="text-center">
 		<div class="overlay">
 	    <div class="content">
@@ -36,12 +37,12 @@
 				<!--end carousel-->	
 			</div>
 			<div class="col-md-6">	
-				<h1 class="section-title">STAFF <strong class="color">FAVORITES</strong>!</h1>
-				<div class="section-title">
+				<h1 class="section-title center">STAFF <strong class="color">FAVORITES</strong>!</h1>
+				<div class="section-title center">
 					<p>We are constantly getting in great bikes from all around the city! Here are some of our current favorites! Be sure to check them out, or you can go straight on to our products page to see all the wonderful bikes we have in stock.</p>
 				</div>
-				<div class="section-title">
-					<div class="btn btn-primary btn-xl" href="#">All Bikes!</div>
+				<div class="section-title center">
+					<%= link_to "All Bikes!", products_path, :class => "btn btn-primary btn-xl" %>
 				</div>
 			</div>
 		</div>
@@ -51,19 +52,19 @@
 		<!-- Content Row -->
   <div class="row">
     <div class="col-md-4">
-       <h2>Heading 1</h2>
+       <h2 class="column-title">Heading 1</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
           <a class="btn btn-default" href="#">More Info</a>
     </div>
     <!-- /.col-md-4 -->
         <div class="col-md-4">
-       <h2>Heading 2</h2>
+       <h2 class="column-title">Heading 2</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
           <a class="btn btn-default" href="#">More Info</a>
     </div>
     <!-- /.col-md-4 -->
         <div class="col-md-4">
-       <h2>Heading 3</h2>
+       <h2 class="column-title">Heading 3</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placea  Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
           <a class="btn btn-default" href="#">More Info</a>
     </div>
