--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -10,17 +10,17 @@ body {
 }
 
 .section-title{
-	text-align: center;
 	padding-top: 30px;
 	text-transform: uppercase;
-	letter-spacing: 1px;
+
+}
+
+.column-title{
+	padding-top: 30px;
 }
 
 .center{
 	text-align: center;
-	padding-top: 30px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
 }
 
 .color {
@@ -31,48 +31,11 @@ a {
 	color: #ffcc33;
 }
 
-a.visited .btn-xl{
+a.visited{
 	color: white;
 }
 
-/* Carousel */
 
-.carousel-indicators {
-  top: auto;
-  bottom: -15px;
-}
-
-.carousel-indicators li {
-    display: inline-block;
-    margin: 10px;
-    text-indent: 0;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-    background-color: #000;
-    box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.5);    
-}
-
-.carousel-indicators .active {
-    margin: 10px;
-    background-color: #ffcc33;
-}
-
-.carousel-inner img {
-	margin: auto;
-	maring-bottom: 50px;
-	margin-top: 50px;
-}
-
-.carousel-caption {
-	top: -30px;
-    bottom: auto;
-    color:#000;
-    text-shadow: none;
-    text-transform: uppercase;
-	letter-spacing: .5px;
-	text-size: 12px;
-}
 	
 /* Navigation */
 #bb-menu {
@@ -174,6 +137,61 @@ color: #ffcc33;
 	padding: 10% 0 0;
 }
 
+/* Carousel */
+
+.carousel-indicators {
+  top: auto;
+  bottom: -15px;
+}
+
+.carousel-indicators li {
+    display: inline-block;
+    margin: 10px;
+    text-indent: 0;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    background-color: #000;
+    box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.5);    
+}
+
+.carousel-indicators .active {
+    margin: 10px;
+    background-color: #ffcc33;
+}
+
+.carousel-inner img {
+	margin: auto;
+	maring-bottom: 50px;
+	margin-top: 50px;
+}
+
+.carousel-caption {
+	top: -30px;
+    bottom: auto;
+    color:#000;
+    text-shadow: none;
+    text-transform: uppercase;
+	letter-spacing: .5px;
+	text-size: 12px;
+}
+
+/* form */
+.lg-container{
+	width: auto;
+	max-width:500px;
+	margin:50px auto;
+	padding:20px 40px;
+	border:1px solid #f4f4f4;
+	background:rgba(41,111,164,.5);
+	-webkit-border-radius:10px;
+	-moz-border-radius:10px;
+	border-radius:10px;
+	-webkit-box-shadow: 0 0 2px #aaa;
+	-moz-box-shadow: 0 0 2px #aaa;
+	box-shadow: 0 0 2px #aaa;
+}
+
 /* Buttons */
 .btn-xl {
     padding: 20px 40px;
@@ -187,11 +205,29 @@ color: #ffcc33;
     background-color: #296FA4;
 }
 
+.btn-sm {
+    padding: 5px 10px;
+    border-color: #fed136;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    color: #fff;
+    background-color: #296FA4;
+}
+
 .btn-xl:hover,
 .btn-xl:focus,
 .btn-xl:active,
 .btn-xl.active,
-.open .dropdown-toggle.btn-xl {
+.open .dropdown-toggle.btn-xl,
+.btn-sm:hover,
+.btn-sm:focus,
+.btn-sm:active,
+.btn-sm.active,
+.open .dropdown-toggle.btn-sm
+ {
     border-color: #f6bf01;
     color: #fff;
     background-color: #fec503;
@@ -199,27 +235,11 @@ color: #ffcc33;
 
 .btn-xl:active,
 .btn-xl.active,
-.open .dropdown-toggle.btn-xl {
+.open .dropdown-toggle.btn-xl,
+.btn-sm:active,
+.btn-sm.active,
+.open .dropdown-toggle.btn-sm {
     background-image: none;
-}
-
-.btn-xl.disabled,
-.btn-xl[disabled],
-fieldset[disabled] .btn-xl,
-.btn-xl.disabled:hover,
-.btn-xl[disabled]:hover,
-fieldset[disabled] .btn-xl:hover,
-.btn-xl.disabled:focus,
-.btn-xl[disabled]:focus,
-fieldset[disabled] .btn-xl:focus,
-.btn-xl.disabled:active,
-.btn-xl[disabled]:active,
-fieldset[disabled] .btn-xl:active,
-.btn-xl.disabled.active,
-.btn-xl[disabled].active,
-fieldset[disabled] .btn-xl.active {
-    border-color: #fed136;
-    background-color: #fed136;
 }
 
 /* Footer */
