--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,17 +33,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Berlin Bikes", root_path %>
+          <%= link_to "Berlin Bikes", root_path, :class => "navbar-brand" %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-left">
             <li><%= link_to "About", static_pages_about_path %></li>
             <li><%= link_to "Bikes", products_path %></li>
             <li><%= link_to "Gallery", root_path %></li>
             <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
+          <%= form_tag("/products", method: "get", :class => "navbar-form navbar-right") do %>
+            <%= label_tag(:q, "Search for:") %>
+            <%= text_field_tag(:q, nil, placeholder: "Looking for something?", class: "form-control") %>
+            <%= submit_tag("Search", class: "btn btn-sm") %>
+          <% end %>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
