--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,11 +1,13 @@
 
 <div class="container">
-	<h1>Editing Product</h1>
-
-	<%= render 'form' %>
-
+	<h1 class="section-title center">Edit Product</h1>
+	<div class="lg-container">
+		<%= render 'form' %>
+	</div>
+	<div class="container">
 	<%= link_to 'Show', @product %> |
 	<%= link_to 'Back', product_path %>
-
-<br>
+	<br>
 </div>
+</div>
+
