reuploading with fixed headers

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -182,7 +182,7 @@ color: #ffcc33;
 	max-width:500px;
 	margin:50px auto;
 	padding:20px 40px;
-	border:1px solid #f4f4f4;
+	border:1px solid #fed136;
 	background:rgba(41,111,164,.5);
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
