--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 	<p id="notice"><%= notice %></p>
-	  <h1 class="section-title">Check out our <strong class="color">awesome</strong> bikes!</h1>
+	  <h1 class="section-title center">Check out our <strong class="color">awesome</strong> bikes!</h1>
 	  <hr>
 	  <div class="container-fluid">
 	    <div class="row">
