--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
-	<h1>New Product</h1>
+	<h1 class="section-title center">Create New Product</h1>
 
-	<%= render 'form' %>
-
+	<div class="lg-container">
+		<%= render 'form' %>
+	</div>
+	<div class="container">
 	<%= link_to 'Back', products_path %>
+	</div>
 </div>
