--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,6 @@
-<h1>StaticPages#contact</h1>
-<p>Welcome! The date and time is <%= Time.now %></p>
-<p>If are so confused as to what this page is about, as it is currently about nothing, and need someone to talk to because that concept is beyond you, you can email me</P>
-	<p><strong>ameliajanemurph@gmail.com</strong></p>
-	<p>Otherwise, just wait a bit, and you will see this page become an actual something</p>
+<h1 class="section-title center">Contact Us</h1>
+<p class="center">Feel free to contact us with any questions you might have!</p>
+<div class="lg-container">
+	<%= render 'shared/contact' %>
+</div>
+
