--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<div class="form-horizontal">
   <%= form_for(@product) do |f| %>
     <% if @product.errors.any? %>
       <div id="error_explanation">
@@ -84,4 +84,4 @@
   <% end %>
   <br>
 </div>
-</form>
+</div>
