--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 		  <div class="col-md-6">  
 		    <div class="thumbnail">
 		        <div class="caption-full">
-		          <h4 class="pull-right">&#36;<%= @product.price %></h4>
+		          <h4 class="pull-right"><%= number_to_currency(@product.price) %></h4>
 		          <h4><a href="#"><%= @product.name %></a>
 		          </h4>
 		          <p><%= @product.description %></p>
