--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,11 +44,21 @@
             <li><%= link_to "Gallery", root_path %></li>
             <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
+          <ul class="nav navbar-right">
+            <li>
+              <% if user_signed_in? %>
+                <%= link_to('Log out', destroy_user_session_path, :method => :delete) %>
+              <% else %>
+                <%= link_to('Login', new_user_session_path) %>
+              <% end %>
+            </li>
+          </ul>
           <%= form_tag("/products", method: "get", :class => "navbar-form navbar-right") do %>
             <%= label_tag(:q, "Search for:") %>
             <%= text_field_tag(:q, nil, placeholder: "Looking for something?", class: "form-control") %>
             <%= submit_tag("Search", class: "btn btn-sm") %>
           <% end %>
+
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
