--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="actions">
-      <%= f.submit :class => "btn btn-primary btn-sm" %>
+      <%= f.submit :class => "btn btn-primary" %>
     </div>
   <% end %>
   <br>
