--- a/app/views/shared/_contact.html.erb
+++ b/app/views/shared/_contact.html.erb
@@ -15,5 +15,5 @@
 			<%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
 		</div>
 
-<%= submit_tag "Send" %>
+<%= submit_tag "Send", class: "btn btn-primary" %>
 <% end %>
