--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,13 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-
+    <% if notice %>
+        <p id="notice" class="alert alert-info center"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p id="alert" class="alert alert-info center"><%= alert %></p>
+     <% end %>
+      
 <%= yield %>
 
 <!-- Footer
