--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "About", static_pages_about_path %></li>
+            <li><%= link_to "About", root_path %></li>
             <li><%= link_to "Bikes", products_path %></li>
             <li><%= link_to "Gallery", root_path %></li>
             <li><%= link_to "Contact", static_pages_contact_path %></li>
