--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,7 +2,7 @@
 	<div id="bb-header" class="text-center">
 		<div class="overlay">
 		    <div class="content">
-				<h1>Welcome to Bikes Berlin</h1>
+				<h1>Welcome to Berlin Bikes</h1>
 				<h2>Your source for used bikes in Berlin</h2>
 				<a href="#featured" class="page-scroll btn btn-xl">Featured Products</a>
 			</div>
